# harper

./: .gitattributes  AGENTS.md  Cargo.toml  Dockerfile  LANGUAGE_SUPPORT_REPORT.md  README.md  demo.md  index.html  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.md
.github/: pull_request_template.md
.github/workflows/: build_web.yml  just_checks.yml  release_wp_plugin.yml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_harper_comment.rs  fuzz_harper_core_markdown.rs  fuzz_harper_html.rs  fuzz_harper_literate_haskell.rs  fuzz_harper_typst.rs
harper-asciidoc/: Cargo.toml
harper-asciidoc/src/: lib.rs
harper-asciidoc/tests/: asciidoc_tests.rs
harper-asciidoc/tests/test_sources/: basic.adoc  comment.adoc  comprehensive.adoc  table.adoc
harper-brill/: Cargo.toml
harper-brill/src/: lib.rs
harper-cli/: Cargo.toml
harper-cli/src/: annotate.rs  annotate_tokens.rs  check_linters.rs  input.rs  lint.rs  main.rs
harper-cli/src/input/: multi_input.rs  single_input.rs
harper-cli/src/lint/: mod.rs  rich_format.rs
harper-cli/tests/: no_color.rs  output_format.rs
harper-comments/: Cargo.toml
harper-comments/src/: comment_parser.rs  masker.rs
harper-comments/src/comment_parsers/: jsdoc.rs  lua.rs  solidity.rs
harper-comments/tests/: language_support.rs
harper-comments/tests/language_support_sources/: basic.clj  basic_groovy.groovy  basic_kotlin.kt  clean.ps1  clean.rs  clean.sol  clean.zig  common.mill  complex_gradle_build.gradle  complex_groovy_block_comments.groovy  complex_groovy_strings_regex.groovy  dirty.zig  ignore_comments.ps1  issue_1097.lua  javadoc_complex.java  jsdoc.ts  multiline_comments.cpp  multiline_comments.ts
harper-core/: -: determiner property  Cargo.toml  README.md  affixes-es.json  affixes.json  annotations.json  build.rs  default_config.json  dictionary-es.dict  dictionary.dict  expr_linter_skeleton.rs  expr_linter_skeleton_commented.rs  irregular_nouns.json  irregular_verbs.json  proper_noun_rules.json
harper-core/benches/: parse_demo.rs  spellcheck.rs
harper-core/benches/misspelled_words/: capitalized.md  lowercase.md  mixed.md
harper-core/src/: canonical_case.rs  case.rs  char_ext.rs  char_slice.rs  char_string.rs  currency.rs  dict_word_metadata.rs  document.rs  fat_token.rs  indefinite_article.rs  inflections.rs  irregular_nouns.rs  irregular_verbs.rs  language_detection.rs  lexeme_metadata.rs  lexeme_metadata_orthography.rs  lib.rs  number.rs  offsets.rs  punctuation.rs  regular_nouns.rs  span.rs  thesaurus_helper.rs  title_case.rs  token.rs  token_kind.rs  token_string_ext.rs  vec_ext.rs  word_metadata.rs
harper-core/src/expr/: all.rs  anchor_end.rs  anchor_hard_end.rs  anchor_hard_start.rs  anchor_start.rs  duration_expr.rs  expr_map.rs  filter.rs  first_match_of.rs  fixed_phrase.rs  longest_match_of.rs  mergeable_words.rs  mod.rs  nominal_phrase.rs  optional.rs  pronoun_be.rs  reflexive_pronoun.rs  repeating.rs  sequence_expr.rs  similar_to_phrase.rs  space_or_hyphen.rs  spelled_number_expr.rs  step.rs  time_unit_expr.rs  unless_step.rs  word_expr_group.rs  word_sequence_expr.rs
harper-core/src/ignored_lints/: lint_context.rs  mod.rs
harper-core/src/lexing/: email_address.rs  hostname.rs  mod.rs  url.rs
harper-core/src/linting/: a_part.rs  a_while.rs  addicting.rs  adjective_double_degree.rs  adjective_of_a.rs  adverb_verb_lemma.rs  affect_effect.rs  after_later.rs  all_hell_break_loose.rs  all_intents_and_purposes.rs  allow_to.rs  am_in_the_morning.rs  amounts_for.rs  an_a.rs  and_in.rs  and_the_like.rs  another_thing_coming.rs  another_think_coming.rs  apart_from.rs  apostrophe_plurals.rs  arrive_to.rs  ask_no_preposition.rs  aspire_to.rs  avoid_curses.rs  back_in_the_day.rs  be_abstract_noun.rs  be_adjective_confusions.rs  be_allowed.rs  be_worried.rs  behind_the_scenes.rs  best_of_all_time.rs  boring_words.rs  bought.rs  brand_brandish.rs  by_accident.rs  call_them.rs  cant.rs  capitalize_personal_pronouns.rs  cautionary_tale.rs  change_tack.rs  (+257 more)
harper-core/src/mask/: mod.rs  regex_masker.rs
harper-core/src/parsers/: collapse_identifiers.rs  isolate_english.rs  markdown.rs  mod.rs  oops_all_headings.rs  org_mode.rs  plain_english.rs
harper-core/src/patterns/: custom_token.rs  derived_from.rs  dictionary_token.rs  exact_phrase.rs  implies_quantity.rs  inflection_of_be.rs  inflection_of_have.rs  inflection_of_need.rs  inflection_of_want.rs  is_not_canonical_case.rs  mod.rs  modal_verb.rs  nominal_phrase.rs  prepositional_preceder.rs  sequence_pattern.rs  word.rs  (+3 more)
harper-core/tests/: pos_tags.rs  run_tests.rs  snapshot.rs
harper-html/: Cargo.toml
harper-html/tests/: run_tests.rs
harper-ink/: Cargo.toml
harper-jjdescription/: Cargo.toml
harper-literate-haskell/: Cargo.toml
harper-literate-haskell/tests/: run_tests.rs
harper-ls/: Cargo.toml
harper-ls/src/: backend.rs  config.rs  diagnostics.rs  dictionary_io.rs  document_state.rs
harper-pos-utils/: Cargo.toml
harper-pos-utils/src/: upos.rs
harper-python/: Cargo.toml
harper-stats/: Cargo.toml
harper-stats/src/: record.rs  summary.rs
harper-tex/: Cargo.toml
harper-tex/src/: lib.rs  masker.rs
harper-tex/tests/: run_tests.rs
harper-thesaurus/: Cargo.toml  build.rs  word-freq.txt
harper-thesaurus/src/: lib.rs  thesaurus.rs
harper-tree-sitter/: Cargo.toml
harper-tree-sitter/src/: lib.rs
harper-typst/: Cargo.toml
harper-typst/src/: lib.rs  offset_cursor.rs  typst_translator.rs
harper-typst/tests/: run_tests.rs  tests.rs
harper-wasm/: Cargo.toml
harper-wasm/src/: lib.rs
weir_rules/: AtLeasToLeast.weir  BelieveInPreposition.weir  CauseItIsBecause.weir  ColdModalTypo.weir  EachOthersPossessive.weir  EasyGoingCompoundAdjective.weir  ExistentialPluralAgreement.weir  ExitedExcitedContext.weir  FirstPersonModifierHyphen.weir  FullWithToOf.weir  HaveNegNoAny.weir  InAdjectiveMatter.weir  IsBeenAuxSequence.weir  ItTimeAuxiliary.weir  LookInto.weir  MakeupCompoundNoun.weir  PleasRequestVerb.weir  PostItNoteHyphen.weir  SayTellYou.weir  ThereAfterCompound.weir  ThieveNoun.weir  WokVerbTypo.weir
(+411 files in other folders)
