[package]
name = "harper-literate-haskell"
version = "1.8.0"
edition = "2024"
description = "The language checker for developers."
license = "Apache-2.0"
repository = "https://github.com/automattic/harper"

[dependencies]
harper-core = { path = "../harper-core", version = "1.0.0" }
harper-tree-sitter = { path = "../harper-tree-sitter", version = "1.0.0" }
harper-comments = { path = "../harper-comments", version = "1.0.0" }
itertools = "0.14.0"
paste = "1.0.14"
