[package]
name = "harper-ls"
version = "1.8.0"
edition = "2024"
description = "The language checker for developers."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/automattic/harper"

[dependencies]
harper-stats = { path = "../harper-stats", version = "1.0.0" }
harper-literate-haskell = { path = "../harper-literate-haskell", version = "1.0.0" }
harper-core = { path = "../harper-core", version = "1.0.0", features = ["concurrent"] }
harper-comments = { path = "../harper-comments", version = "1.0.0" }
harper-jjdescription = { path = "../harper-jjdescription", version = "1.0.0" }
harper-typst = { path = "../harper-typst", version = "1.0.0" }
harper-tex = { path = "../harper-tex", version = "1.0.0" }
harper-html = { path = "../harper-html", version = "1.0.0" }
harper-python = { path = "../harper-python", version = "1.0.0" }
harper-asciidoc = { path = "../harper-asciidoc", version = "1.0.0" }
tower-lsp-server = "0.22.1"
tokio = { version = "1.49.0", default-features = false, features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "sync"] }
clap = { version = "4.5.60", default-features = false, features = ["derive", "std"] }
dirs = "6.0.0"
anyhow = "1.0.102"
serde_json = "1.0.149"
itertools = "0.14.0"
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt", "std"] }
resolve-path = "0.1.0"
open = "5.3.3"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
globset = "0.4.18"
harper-ink = { version = "1.0.0", path = "../harper-ink" }

[features]
default = []
thesaurus = ["harper-core/thesaurus"]
