[package]
name = "harper-stats"
version = "1.8.0"
edition = "2021"
description = "The language checker for developers."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/automattic/harper"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
harper-core = { path = "../harper-core", version = "1.0.0", features = ["concurrent"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
serde_json = "1.0.149"
chrono = "0.4.43"

[features]
default = []
js = ["uuid/js"]
